# risc0-foundry-template

./: .gitignore
apps/: Cargo.toml  justfile
apps/src/types/: mod.rs  proof_type.rs
contracts/: anyVerifier.sol
tests/: zeth113.t.sol
