[package]
name = "apps"
version = "1.1.3"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
env_logger = { version = "0.10" }
serde = { version = "1.0.216" }
serde_json = { version = "1.0.133"}
hex ={ version = "0.4.3"}

anyhow = { version = "1.0.75" }
log = { version = "0.4" }
# risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.1.3" }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.1.3" }
# risc0-zkvm = { version = "1.1.3", default-features = false }
risc0-zkp = { version = "1.1.3" }
bincode ={ version = "1.3.3"}